# hodrl

./: .dockerignore  Dockerfile.hodrl  LICENSE  README.md  compose.test.yaml  compose.yaml  docker-compose.test.yml  docker-compose.yml  pyproject.toml
config/metadata-store/: config.ttl  vocabulary.ttl
hORDL/: pyproject.toml
hodrl/ui/: .#requirements.txt  app.py
metadata-store/: config.ttl  vocabulary.ttl
src/hodrl/: api.py  asset_queries.py  cli.py  utils.py
test/data/: ODRL-w3c-examples.ttl
tests/: conftest.py  test_asset_queries.py
tests/api/: test_endpoints.py
tests/cli/: test_cli.py
tests/ui/: test_ui.py
ui/: app.py  layout.py  requirements.txt
