[project]
name = "hodrl"
version = "v0.1.0"
#dependencies = []
requires-python = ">=3.10"
authors = [
  {name = "Oliver Woolland", email = "oliver.woolland@manchester.ac.uk"},
]
maintainers = [
  {name = "Oliver Woolland", email = "oliver.woolland@manchester.ac.uk"}
]
description = "hODRL: Keep the hordes at bay with Python execution of ODRL policies."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["odrl", "rdf"]
classifiers = [
  "Programming Language :: Python"
]

[project.optional-dependencies]
dev = [
    "pytest"
]
cli = [     
  "click>=8.0"  
]
ui = [
  "dash",
  "dash-iconify",
  "dash-bootstrap-components",
  "dash-mantine-components",
]
api = [
  "fastapi==0.116.0",
  "uvicorn==0.35.0"
]

[project.urls]
Repository = "https://github.com/OliverWoolland/hodrl.git"

[project.scripts]
hodrl = "hodrl:main"
hodrl-cli = "hodrl.cli:main"
hodrl-api = "hodrl.api:main"
hodrl-ui = "hodrl.ui.app:main"