[project]
name = "hodrl"
version = "v0.1.0"
dependencies = [
]
requires-python = ">=3.10"
authors = [
  {name = "Oliver Woolland", email = "oliver.woolland@manchester.ac.uk"},
]
maintainers = [
  {name = "Oliver Woolland", email = "oliver.woolland@manchester.ac.uk"}
]
description = "hODRL: Keep the hordes at bay with Python execution of ODRL policies."
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E.*"]
keywords = ["odrl", "rdf"]
classifiers = [
  "Programming Language :: Python"
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Repository = "https://github.com/OliverWoolland/hodrl.git"

[project.scripts]
hodrl = "hodrl:main"